fix: scrollbar layout shift and place form in accordion

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,7 @@
 @layer utilities {
   body {
     font-family: "Manrope", Arial, Helvetica, sans-serif;
+    overflow-y: scroll;
   }
 }
 
